@@ -584,20 +584,20 @@ vscpClientMqtt::vscpClientMqtt(void)
   m_mapMqttIntOptions["receive-maximum"]  = 20;
   m_mapMqttIntOptions["send-maximum"]     = 20;
 
-  m_bConnected          = false;   // Not connected
-  m_bJsonMeasurementAdd = true;    // Add measurement block to JSON publish event
-  m_bindInterface       = "";      // No bind interface
-  m_mosq                = nullptr; // No mosquitto conection
-  m_publish_format      = jsonfmt; // Publish inm JSON if not configured to do something else
-  m_subscribe_format    = autofmt; // Automatically detect payload format
-  m_bRun                = true;    // Run to the Hills...
-  m_host                = "";      // tcp://localhost:1883
-  m_port                = 1883;    // Default port
-  m_clientid            = "";      // No client id set
-  m_username            = "";      // No username set
-  m_password            = "";      // No password set
-  m_keepAlive           = 30;      // 30 seconds for keepalive
-  m_bCleanSession       = false;   // Do not start with a clean session
+  m_bConnected          = false;        // Not connected
+  m_bJsonMeasurementAdd = true;         // Add measurement block to JSON publish event
+  m_bindInterface       = "";           // No bind interface
+  m_mosq                = nullptr;      // No mosquitto conection
+  m_publish_format      = jsonfmt;      // Publish inm JSON if not configured to do something else
+  m_subscribe_format    = autofmt;      // Automatically detect payload format
+  m_bRun                = true;         // Run to the Hills...
+  m_host                = "localhost";  // tcp://localhost:1883
+  m_port                = 1883;         // Default port
+  m_clientid            = "";           // No client id set
+  m_username            = "";           // No username set
+  m_password            = "";           // No password set
+  m_keepAlive           = 30;           // 30 seconds for keepalive
+  m_bCleanSession       = false;        // Do not start with a clean session
 
   m_bTLS                 = false;
   m_tls_cafile           = "";
@@ -722,6 +722,7 @@ vscpClientMqtt::initFromJson(const std::string &config)
       m_host = j["host"].get<std::string>();
       spdlog::debug("json mqtt init: host set to {}.", m_host);
 
+      // Get hostname
       vscp_trim(m_host);
       if (0 == m_host.find("tcp://")) {
         m_host = m_host.substr(6);
@@ -734,6 +735,7 @@ vscpClientMqtt::initFromJson(const std::string &config)
         spdlog::debug("json mqtt init: Secure connection {}.", m_host);
       }
 
+      // Get port
       size_t pos;
       if (std::string::npos != (pos = m_host.rfind(":"))) {
         m_port = vscp_readStringValue(m_host.substr(pos + 1));
