@@ -1,6 +1,8 @@
 Change log for the VSCP Daemon
 ==============================
 
+211004 AKHE  Fixed error in MQTT client which skips GUID parsing for JSON objects. 
+211004 AKHE  Fixed host/port interface extraction in helper lib
 210922 AKHE  The debug flags of the config file can now be set as a string containing 
              a hexa decimal representation.
 210922 AKHE  Added -v switch for version display.
